overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,5 @@
   position: absolute;
   z-index: -100;
   width: 100%;
+  overflow: hidden;
 }
